--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>Projet_tutore_back</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>projet_tutore</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Projet tutore backend</description>
     <properties>
         <java.version>11</java.version>
         <kotlin.version>1.4.32</kotlin.version>
@@ -33,8 +33,34 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.12.1</version>
         </dependency>
     </dependencies>
 
