--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
+            <artifactId>spring-security-web</artifactId>
         </dependency>
     </dependencies>
 
