--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/projettut
+spring.datasource.url=jdbc:mysql://b1fd47f2e27140:c596414a@eu-cdbr-west-01.cleardb.com/heroku_0ecd19e3869474c?reconnect=true
 spring.datasource.username=b1fd47f2e27140
 spring.datasource.password=c596414a
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
