--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://b1fd47f2e27140:c596414a@eu-cdbr-west-01.cleardb.com/heroku_0ecd19e3869474c?reconnect=true
 spring.datasource.username=b1fd47f2e27140
 spring.datasource.password=c596414a
